// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSwift > generates correct Swift for a simple intent 1`] = `
"// SendMessageIntent.swift
// Generated by Axint — https://github.com/agenticempire/axint
// Do not edit manually. Re-run \`axint compile\` to regenerate.

import AppIntents
import Foundation

struct SendMessageIntent: AppIntent {
    static let title: LocalizedStringResource = "Send Message"
    static let description: IntentDescription = IntentDescription("Sends a message to a contact")

    @Parameter(title: "Recipient", description: "Who to send the message to")
    var recipient: String

    @Parameter(title: "Body", description: "The message content")
    var body: String


    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        // Parameters available: \\(recipient), \\(body)
        return .result(value: "")
    }
}
"
`;

exports[`generateSwift > generates correct Swift for an intent with no parameters 1`] = `
"// GetStatusIntent.swift
// Generated by Axint — https://github.com/agenticempire/axint
// Do not edit manually. Re-run \`axint compile\` to regenerate.

import AppIntents
import Foundation

struct GetStatusIntent: AppIntent {
    static let title: LocalizedStringResource = "Get Status"
    static let description: IntentDescription = IntentDescription("Gets current status")

    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        return .result(value: "")
    }
}
"
`;

exports[`generateSwift > generates correct Swift for optional and default params 1`] = `
"// CreateReminderIntent.swift
// Generated by Axint — https://github.com/agenticempire/axint
// Do not edit manually. Re-run \`axint compile\` to regenerate.

import AppIntents
import Foundation

struct CreateReminderIntent: AppIntent {
    static let title: LocalizedStringResource = "Create Reminder"
    static let description: IntentDescription = IntentDescription("Creates a reminder")

    @Parameter(title: "Title", description: "Reminder title")
    var title: String

    @Parameter(title: "Notes", description: "Optional notes")
    var notes: String?

    @Parameter(title: "Priority", description: "Priority level")
    var priority: Int = 1


    func perform() async throws -> some IntentResult & ReturnsValue<String> {
        // TODO: Implement your intent logic here.
        // Parameters available: \\(title), \\(notes), \\(priority)
        return .result(value: "")
    }
}
"
`;
